nav__contacts-click

--- a/contacts.html
+++ b/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>Portfolio</title>
@@ -39,10 +39,10 @@
 				<div class="contacts">
 					<p>Контакты</p>
 					<div class="mail"><a href="mailto:homenkovit@gmail.com"><i></i>homenkovit@gmail.com</a></div>
-					<div class="number"><i></i>+79112700781</div>
-					<div class="skype"><i></i>homenkovit</div>
+					<div class="number"><a href="tel:+79112700781"><i></i>+79112700781</a></div>
+					<div class="skype"><a href="skype:wickedcorpse?call"><i></i>homenkovit</a></div>
 				</div>
-				</div>
+			</div>
 			<div class="right_col">
 				<div class="content_main">
 					<div class="contact_me">
