--- a/works.html
+++ b/works.html
@@ -77,6 +77,34 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- POPUP -->
+
+		<div class="popup_conteiner">
+			<div class="popup_content">
+				<div class="popup_header">
+					<h3 class="popup_h3">Добавление проекта</h3>
+					<a href="#" class="popup_close"></a>
+				</div>
+				<form action="">
+					<p class="popup-element">Название проекта<br>
+						<input placeholder="Введите название" onfocus="placeholder='';" onblur="placeholder='Введите название';" type="text">
+					</p>
+					<p class="popup-element">Картинка проекта<br>
+						<input placeholder="Картинка проекта" onfocus="placeholder='';" onblur="placeholder='Картинка проекта';" type="file">
+
+					</p>
+					<p class="popup-element">URL проекта<br>
+						<input placeholder="Добавить ссылку" onfocus="placeholder='';" onblur="placeholder='Добавить ссылку';" type="text">
+					</p>
+					<p class="popup-element">Описание<br>
+						<textarea placeholder="Пара слов о Вашем проекте" onfocus="placeholder='';" onblur="placeholder='Пара слов о Вашем проекте';"  name="comment"></textarea>
+					</p>
+					<input type="submit" class="button" value="Добавить">
+				</form>
+			</div>			
+		</div>
+
 		<footer>
 			<div class="border"></div>
 			<p>&copy; 2014, Это мой сайт, пожалуйста, не копируйте и не воруйте его</p>
