--- a/contacts.html
+++ b/contacts.html
@@ -47,14 +47,14 @@
 				<div class="content_main">
 					<div class="contact_me">
 						<div class="contact_me__header">У вас интересный проект? Напишите мне</div>
-						<form action="">
-							<p class="form_name">Имя<br><input placeholder="Как к Вам обращаться" onfocus="placeholder='';" onblur="placeholder='Как к Вам обращаться';" type="text"></p>
-							<p class="form_email">Email<br><input placeholder="Куда мне писать" onfocus="placeholder='';" onblur="placeholder='Куда мне писать';" type="text"></p>
-							<p class="form_comments">Сообщение<br><textarea placeholder="Кратко в чём суть" onfocus="placeholder='';" onblur="placeholder='Кратко в чём суть';"  name="comment"></textarea></p>
+						<form class="contact_form" action="">
+							<p class="form_name">Имя<br><input class="contact_input" placeholder="Как к Вам обращаться" onfocus="placeholder='';" onblur="placeholder='Как к Вам обращаться';" type="text"></p>
+							<p class="form_email">Email<br><input class="contact_input" placeholder="Куда мне писать" onfocus="placeholder='';" onblur="placeholder='Куда мне писать';" type="text"></p>
+							<p class="form_comments">Сообщение<br><textarea class="comments" placeholder="Кратко в чём суть" onfocus="placeholder='';" onblur="placeholder='Кратко в чём суть';"  name="comment"></textarea></p>
 							<p class="form_captcha">Введите код, указанный на картинке<br>
 								<div class="captcha"><img src="images/captcha.png" alt="captcha"></div>
 							</p>
-							<p class="form_captcha_input"><input placeholder="Введите код" onfocus="placeholder='';" onblur="placeholder='Введите код';"  type="text"></p>
+							<p class="form_captcha_input"><input class="contact_input" placeholder="Введите код" onfocus="placeholder='';" onblur="placeholder='Введите код';"  type="text"></p>
 							<p class="button">
 								<input class="submit" type="submit" value="Отправить">
    								<input class="reset" type="reset" value="Очистить">
