popup+header-footer

--- a/works.html
+++ b/works.html
@@ -8,108 +8,107 @@
 	<link rel="icon" href="images/favicon.ico" type="image/icon">
 </head>
 <body>
-	<div class="conteiner">
-		<header>
-			<div class="header__wrapper">
-				<div class="logo">
-					<p><span>хоменко виталий</span></p>
+	<header>
+		<div class="header__wrapper">
+			<div class="logo">
+				<p><span>хоменко виталий</span></p>
+				<hr>
+				<p>комплексная web разработка</p>
+			</div>
+			<div class="social">
+				<ul>
+					<li class="vk"><a href="https://vk.com/humanxanimal" target="blank"></a></li>
+					<li class="tw"><a href="https://twitter.com/VitalyKhomenko" target="blank"></a></li>
+					<li class="fb"><a href="https://www.facebook.com/profile.php?id=100001746395367" target="blank"></a></li>
+					<li class="gh"><a href="https://github.com/homenkovit" target="blank"></a></li>
+				</ul>
+			</div>
+		</div>
+	</header>
+	<div class="content">
+		<div class="left_col">
+			<aside>
+				<ul>
+					<li><a href="index.html">Обо мне<hr></a></li>
+					<li><a href="#" class="active_nav">Мои работы<hr></a></li>
+					<li><a href="contacts.html">Связаться со мной</a></li>
+				</ul>
+			</aside>
+			<div class="contacts">
+				<p>Контакты</p>
+				<div class="mail"><a href="mailto:homenkovit@gmail.com"><i></i>homenkovit@gmail.com</a></div>
+				<div class="number"><a href="tel:+79112700781"><i></i>+79112700781</a></div>
+				<div class="skype"><a href="skype:wickedcorpse?call"><i></i>homenkovit</a></div>
+			</div>
+		</div>
+		<div class="right_col">
+			<div class="content_main">
+				<div class="my_works">
+					<h3>Мои работы</h3>
 					<hr>
-					<p>комплексная web разработка</p>
-				</div>
-				<div class="social">
-					<ul>
-						<li class="vk"><a href="https://vk.com/humanxanimal" target="blank"></a></li>
-						<li class="tw"><a href="https://twitter.com/VitalyKhomenko" target="blank"></a></li>
-						<li class="fb"><a href="https://www.facebook.com/profile.php?id=100001746395367" target="blank"></a></li>
-						<li class="gh"><a href="https://github.com/homenkovit" target="blank"></a></li>
-					</ul>
-				</div>
-			</div>
-		</header>
-		<div class="border"></div>
-		<div class="content">
-			<div class="left_col">
-				<aside>
-					<ul>
-						<li><a href="index.html">Обо мне<hr></a></li>
-						<li><a href="#" class="active_nav">Мои работы<hr></a></li>
-						<li><a href="contacts.html">Связаться со мной</a></li>
-					</ul>
-				</aside>
-				<div class="contacts">
-					<p>Контакты</p>
-					<div class="mail"><a href="mailto:homenkovit@gmail.com"><i></i>homenkovit@gmail.com</a></div>
-					<div class="number"><a href="tel:+79112700781"><i></i>+79112700781</a></div>
-					<div class="skype"><a href="skype:wickedcorpse?call"><i></i>homenkovit</a></div>
-				</div>
-			</div>
-			<div class="right_col">
-				<div class="content_main">
-					<div class="my_works">
-						<h3>Мои работы</h3>
-						<hr>
-						<div class="works_view">
-							<div class="works">
-								<a href="#" class="img"><div class="for_hover"><p>название</p></div></a>
-								<p><a href="#">www.site.ru</a></p>
-								<p>Информация о проекте<br>1 превью 2 строки....</p>
-							</div>
-							<div class="works">
-								<a href="#" class="img"><div class="for_hover"><p>название</p></div></a>
-								<p><a href="#">www.site.ru</a></p>
-								<p>Информация о проекте<br>2 превью 2 строки....</p>
-							</div>
-							<div class="works">
-								<a href="#" class="img"><div class="for_hover"><p>название</p></div></a>
-								<p><a href="#">www.site.ru</a></p>
-								<p>Информация о проекте<br>3 превью 2 строки....</p>
-							</div>
-							<div class="works">
-								<a href="#" class="img"><div class="for_hover"><p>название</p></div></a>
-								<p><a href="#">www.site.ru</a></p>
-								<p>Информация о проекте<br>4 превью 2 строки....</p>
-							</div>
-							<div class="add_new_project" class="works">
-								<img src="images/add_new_project.png" alt=""><br><p>Добавить проект</p>
-							</div>
+					<div class="works_view">
+						<div class="works">
+							<a href="#" class="img"><div class="for_hover"><p>название</p></div></a>
+							<p><a href="#">www.site.ru</a></p>
+							<p>Информация о проекте<br>1 превью 2 строки....</p>
+						</div>
+						<div class="works">
+							<a href="#" class="img"><div class="for_hover"><p>название</p></div></a>
+							<p><a href="#">www.site.ru</a></p>
+							<p>Информация о проекте<br>2 превью 2 строки....</p>
+						</div>
+						<div class="works">
+							<a href="#" class="img"><div class="for_hover"><p>название</p></div></a>
+							<p><a href="#">www.site.ru</a></p>
+							<p>Информация о проекте<br>3 превью 2 строки....</p>
+						</div>
+						<div class="works">
+							<a href="#" class="img"><div class="for_hover"><p>название</p></div></a>
+							<p><a href="#">www.site.ru</a></p>
+							<p>Информация о проекте<br>4 превью 2 строки....</p>
+						</div>
+						<div class="add_new_project" class="works">
+							<img src="images/add_new_project.png" alt=""><br><p>Добавить проект</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
+	<footer>
+		&copy; 2014, Это мой сайт, пожалуйста, не копируйте и не воруйте его
+	</footer>
+	
+	<!-- POPUP -->
 
-		<!-- POPUP -->
-
-		<div class="popup_conteiner">
-			<div class="popup_content">
-				<div class="popup_header">
-					<h3 class="popup_h3">Добавление проекта</h3>
-					<a href="#" class="popup_close"></a>
-				</div>
-				<form class="popup_form" action="">
-					<p class="popup-element">Название проекта<br>
-						<input class="popup_inputtext" placeholder="Введите название" onfocus="placeholder='';" onblur="placeholder='Введите название';" type="text">
-					</p>
-					<p class="popup-element add_img">Картинка проекта<br>
-						<input class="popup_inputtext" placeholder="Загрузите изображение" onfocus="placeholder='';" onblur="placeholder='Загрузите изображение';" type="file">
-					</p>
-					<p class="popup-element">URL проекта<br>
-						<input class="popup_inputtext" placeholder="Добавьте ссылку" onfocus="placeholder='';" onblur="placeholder='Добавьте ссылку';" type="text">
-					</p>
-					<p class="popup-element">Описание<br>
-						<textarea placeholder="Пара слов о Вашем проекте" onfocus="placeholder='';" onblur="placeholder='Пара слов о Вашем проекте';"  name="comment"></textarea>
-					</p>
-					<p class="popup_button">
-						<input type="submit" class="popup_addbutton" value="Добавить">
-					</p>
-				</form>
-			</div>			
-		</div>
-
-		<footer>
-			<div class="border"></div>
-			<p>&copy; 2014, Это мой сайт, пожалуйста, не копируйте и не воруйте его</p>
-		</footer>
+	<div class="popup_conteiner">
+		<div class="popup_content">
+			<div class="popup_header">
+				<h3 class="popup_h3">Добавление проекта</h3>
+				<a href="#" class="popup_close"></a>
+			</div>
+			<form class="popup_form" action="">
+				<p class="popup-element">Название проекта<br>
+					<input class="popup_inputtext" placeholder="Введите название" onfocus="placeholder='';" onblur="placeholder='Введите название';" type="text">
+				</p>
+				<p class="popup_element">Картинка проекта<br>
+					<div class="inputfile_wrap">
+						<input class="popup_inputtext" placeholder="Загрузите изображение" onfocus="placeholder='';" onblur="placeholder='Загрузите изображение';" type="text">
+						<i class="add_img-fake"></i>
+						<input class="add_img" type="file">
+					</div>
+				</p>
+				<p class="popup-element">URL проекта<br>
+					<input class="popup_inputtext" placeholder="Добавьте ссылку" onfocus="placeholder='';" onblur="placeholder='Добавьте ссылку';" type="text">
+				</p>
+				<p class="popup-element">Описание<br>
+					<textarea placeholder="Пара слов о Вашем проекте" onfocus="placeholder='';" onblur="placeholder='Пара слов о Вашем проекте';"  name="comment"></textarea>
+				</p>
+				<p class="popup_button">
+					<input type="submit" class="popup_addbutton" value="Добавить">
+				</p>
+			</form>
+		</div>			
 	</div>	
 </body>
 </html>
