--- a/contacts.html
+++ b/contacts.html
@@ -8,25 +8,25 @@
 	<link rel="icon" href="images/favicon.ico" type="image/icon">
 </head>
 <body>
-	<div class="conteiner">
-		<header>
-			<div class="header__wrapper">
-				<div class="logo">
-					<p><span>хоменко виталий</span></p>
-					<hr>
-					<p>комплексная web разработка</p>
-				</div>
-				<div class="social">
-					<ul>
-						<li class="vk"><a href="https://vk.com/humanxanimal" target="blank"></a></li>
-						<li class="tw"><a href="https://twitter.com/VitalyKhomenko" target="blank"></a></li>
-						<li class="fb"><a href="https://www.facebook.com/profile.php?id=100001746395367" target="blank"></a></li>
-						<li class="gh"><a href="https://github.com/homenkovit" target="blank"></a></li>
-					</ul>
-				</div>
+	<header>
+		<div class="header__wrapper">
+			<div class="logo">
+				<p><span>хоменко виталий</span></p>
+				<hr>
+				<p>комплексная web разработка</p>
 			</div>
-		</header>
-		<div class="border"></div>
+			<div class="social">
+				<ul>
+					<li class="vk"><a href="https://vk.com/humanxanimal" target="blank"></a></li>
+					<li class="tw"><a href="https://twitter.com/VitalyKhomenko" target="blank"></a></li>
+					<li class="fb"><a href="https://www.facebook.com/profile.php?id=100001746395367" target="blank"></a></li>
+					<li class="gh"><a href="https://github.com/homenkovit" target="blank"></a></li>
+				</ul>
+			</div>
+		</div>
+	</header>
+	<!-- <div class="conteiner"> -->
+
 		<div class="content">
 			<div class="left_col">
 				<aside>
@@ -64,10 +64,10 @@
 				</div>
 			</div>
 		</div>
-		<footer>
-			<div class="border"></div>
-			<p>&copy; 2014, Это мой сайт, пожалуйста, не копируйте и не воруйте его</p>
-		</footer>
-	</div>	
+	<!-- </div>	 -->
+
+	<footer>
+		&copy; 2014, Это мой сайт, пожалуйста, не копируйте и не воруйте его
+	</footer>
 </body>
 </html>
